# AI-codegen-telegram-bot

./: .env.sample  README.md  builder_bot.py  main.py  pyproject.toml  runtime_engine.py
builder/: __init__.py  bot.py
builder/handlers/: __init__.py  commands.py
builder/services/: __init__.py  bot_service.py
database/: migrations.py  sqlite.py
examples/: __init__.py  advanced_flow_bot.json  database_lead_bot.json  faq_bot.json  lead_capture_bot.json  support_bot.json
models/: entities.py
plugins/: __init__.py  base.py  builtin.py  example_custom.py  registry.py
runtime/: __init__.py  dispatcher.py  engine.py  manager.py  sessions.py
schemas/: bot_schema.py
services/: ai.py
systemd/: botbuilder.service  runtimeengine.service
utils/: config.py
